--- a/changelog.txt
+++ b/changelog.txt
@@ -37,3 +37,15 @@ r7:
 * Added intra-level layout importing and option to remove all objects in a
 level to Level Properties dialog.
 * Fixed potential crashes caused by having no objects in a level.
+* Added SRAM save hack to enhancements editor.
+
+r8:
+* Added option to the enhancements editor to make a new game start directly from
+a level instead of the world map.
+* Added option to the enhancements editor to change the starting inventory
+items.
+* Fixed camera boundaries display -- previously, it was one tile too far to the
+left.
+* Sorted the object list in the Object Properties dialog alphabetically instead
+of by internal ID number.
+* Changed names of some objects and graphics for consistency and accuracy.
